--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="*">park-kosa.ru</a>
+                    <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                 <div class="place__texts">
@@ -68,7 +68,7 @@
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="*">National Geographic</a>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-kolsky.jpg" alt="Куршская коса">
                 <div class="place__texts">
@@ -82,7 +82,7 @@
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="*">Facebook</a>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                 </div>
                 <img class="place__image" src="./images/place-altai.jpg" alt="Куршская коса">
                 <div class="place__texts">
@@ -95,7 +95,7 @@
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="*">https://vk.com/baikalmile</a>
+                    <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                 </div>
                 <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Куршская коса">
                 <div class="place__texts">
@@ -109,7 +109,7 @@
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="*">http://vodlozero.ru/</a>
+                    <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                 </div>
                 <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                 <div class="place__texts">
@@ -120,7 +120,7 @@
             </div>
         </section>
         <section class="cover">
-           <a class="cover__link" href="#">
+           <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
                 <div class="cover__text-area">
                     <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
@@ -130,11 +130,11 @@
     </main>
     <footer class="footer">
         <div class="footer__links">
-            <a class="footer__link" href="#">Карты</a>
-            <a class="footer__link" href="#">Погода</a>
-            <a class="footer__link" href="#">Расписание</a>
-            <a class="footer__link" href="#">Календарь</a>
-            <a class="footer__link" href="#">Путешествия</a>
+            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
         </div>
         <p class="footer__copyright">&copy; 2022. Черный Олесь</p>   
     </footer>
