--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National&nbsp;Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-kolsky.jpg" alt="Куршская коса">
                 <div class="place__texts">
