--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
     <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="header logo">
         <ul class="header__links">
-            <li class="header__lang-link"><a href="*" class="header__lang-link">Ru</a></li> 
-            <li class="header__lang-link"><a href="*" class="header__lang-link header__lang-link_type_disabled">En</a></li>
+            <li class="header__list-item"><a href="*" class="header__lang-link">Ru</a></li> 
+            <li class="header__list-item"><a href="*" class="header__lang-link header__lang-link_type_disabled">En</a></li>
         </ul>
-        <!-- <div class="header__links">
-            <a href="*" class="header__lang-link">Ru</a>
-            <a href="*" class="header__lang-link header__lang-link_language_en">En</a>
-        </div> -->
     </header>
     <main>
         <section class="lead">
@@ -28,9 +24,7 @@
                 <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
             </figure>
         </section>
-        <section class="intro"> 
-        <!-- Тут вы сказали про лишнию обертку, но она позволяет прижимать контейнер intro__box к левому краю с учетом margin по бокам,
-        если ее убрать, то секция будет центроваться, а по референсу она должна прижиматься к левому краю. Или я что то не понимаю?) -->
+        <section class="intro">
             <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
